; ModuleID = '/home/carl/AnghaBench/linux/fs/xfs/libxfs/extr_xfs_da_format.c_xfs_dir3_data_entry_tag_p.c'
source_filename = "/home/carl/AnghaBench/linux/fs/xfs/libxfs/extr_xfs_da_format.c_xfs_dir3_data_entry_tag_p.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xfs_dir2_data_entry = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.xfs_dir2_data_entry*)* @xfs_dir3_data_entry_tag_p to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @xfs_dir3_data_entry_tag_p(%struct.xfs_dir2_data_entry* %0) #0 {
  %2 = alloca %struct.xfs_dir2_data_entry*, align 8
  store %struct.xfs_dir2_data_entry* %0, %struct.xfs_dir2_data_entry** %2, align 8
  %3 = load %struct.xfs_dir2_data_entry*, %struct.xfs_dir2_data_entry** %2, align 8
  %4 = bitcast %struct.xfs_dir2_data_entry* %3 to i8*
  %5 = load %struct.xfs_dir2_data_entry*, %struct.xfs_dir2_data_entry** %2, align 8
  %6 = getelementptr inbounds %struct.xfs_dir2_data_entry, %struct.xfs_dir2_data_entry* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = call i32 @xfs_dir3_data_entsize(i32 %7)
  %9 = sext i32 %8 to i64
  %10 = getelementptr inbounds i8, i8* %4, i64 %9
  %11 = getelementptr inbounds i8, i8* %10, i64 -4
  %12 = bitcast i8* %11 to i32*
  ret i32* %12
}

declare dso_local i32 @xfs_dir3_data_entsize(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
